refactor: clean the code

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -18,7 +18,7 @@
 
     <div class="header">
       <div class="search-area">
-        <input type="text" id="searchInput" placeholder="点击下面的关键子，以选择输入条件...">
+        <input type="text" id="searchInput" placeholder="点击上面的关键字，以选择输入条件...">
       </div>
       <div class="button-area">
         <div class="generate-text">生成语法类型:</div>
