feat:add ai to analysis the web features

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,11 +8,17 @@
 </head>
 <body>
   <div class="container">
-
       <div class="keywords-section">
         <h2>KEYWORDS:</h2>
+        <div class="keywords-header">
+          <div class="ai-analyze">
+            <button id="aiAnalyzeBtn" class="analyze-button">
+              <span class="button-content">AI 分析</span>
+              <div class="loading-spinner hidden"></div>
+            </button>
+          </div>
+        </div>
         <div class="keywords-grid">
-         
         </div>
       </div>
 
@@ -42,6 +48,7 @@
       </div>
     </div>
   </div>
+  <script src="../options/api.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
