--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,46 +5,66 @@
   <link rel="stylesheet" href="popup.css">
   <script src="crypto-js.min.js"></script>
   <script src="murmurhash3.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <div class="container">
-      <div class="keywords-section">
-        <h2>KEYWORDS:</h2>
-        <div class="keywords-header">
-          <div class="ai-analyze">
-            <button id="aiAnalyzeBtn" class="analyze-button">
-              <span class="button-content">AI 分析</span>
-              <div class="loading-spinner hidden"></div>
+    <div class="main-content">
+      <div class="keywords-card">
+        <div class="card-header">
+          <h2>关键词提取</h2>
+          <button id="aiAnalyzeBtn" class="analyze-button" title="使用AI分析页面内容">
+            <i class="fas fa-magic"></i>
+            <span class="button-content">AI 分析</span>
+            <div class="loading-spinner hidden"></div>
+          </button>
+        </div>
+
+        <div class="keywords-grid"></div>
+      </div>
+
+      <div class="search-card">
+        <div class="search-area">
+          <input type="text" id="searchInput" class="search-input" placeholder="点击上方关键词组合搜索条件...">
+        </div>
+
+        <div class="button-area">
+          <div class="section-label">
+            <span>生成搜索语法</span>
+          </div>
+          <div class="engine-buttons">
+            <button id="fofaBtn" class="engine-button">
+              <img src="fofa.ico" alt="FOFA" class="engine-icon">
+              FOFA
+            </button>
+            <button id="quakeBtn" class="engine-button">
+              <img src="quake.ico" alt="QUAKE" class="engine-icon">
+              QUAKE
             </button>
           </div>
         </div>
-        <div class="keywords-grid">
-        </div>
       </div>
 
-    <div class="header">
-      <div class="search-area">
-        <input type="text" id="searchInput" placeholder="点击上面的关键字，以选择输入条件...">
-      </div>
-      <div class="button-area">
-        <div class="generate-text">生成语法类型:</div>
-        <div class="engine-buttons">
-          <button id="fofaBtn">FOFA</button>
-          <button id="quakeBtn">QUAKE</button>
+      <div class="result-section hidden">
+        <div class="result-card">
+          <div class="result-header">
+            <i class="fas fa-terminal"></i>
+            <span>搜索语法</span>
+          </div>
+          <div class="result-display">
+            <pre id="searchQuery">生成的搜索语法将在这里显示</pre>
+          </div>
+          <div class="action-buttons">
+            <button id="copyBtn" class="action-button">
+              <i class="fas fa-copy"></i>
+              复制
+            </button>
+            <button id="gotoBtn" class="action-button primary">
+              <i class="fas fa-external-link-alt"></i>
+              前往搜索
+            </button>
+          </div>
         </div>
-      </div>
-    </div>
-
-    <div class="result-section hidden">
-      <div class="result-header">
-        <span>搜索语法</span>
-      </div>
-      <div class="result-display">
-        <pre id="searchQuery">生成的搜索语法将在这里显示</pre>
-      </div>
-      <div class="action-buttons">
-        <button id="copyBtn">COPY</button>
-        <button id="gotoBtn">GOTO</button>
       </div>
     </div>
   </div>
