docs: update README.md

--- a/options/options.html
+++ b/options/options.html
@@ -12,7 +12,7 @@
         <i class="fas fa-fingerprint brand-icon"></i>
         <h1>Finger2FQ</h1>
       </div>
-      <p class="subtitle">配置您的搜索助手</p>
+      <p class="subtitle">配置您的分析助手</p>
     </div>
     
     <div class="settings-card">
