--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,7 +12,13 @@
     <div class="main-content">
       <div class="keywords-card">
         <div class="card-header">
-          <h2>关键词提取</h2>
+          <div class="header-left">
+            <h2>关键词提取</h2>
+            <div id="vueIndicator" class="vue-indicator hidden">
+              <i class="fab fa-vuejs"></i>
+              <span>Vue</span>
+            </div>
+          </div>
           <button id="aiAnalyzeBtn" class="analyze-button" title="使用AI分析页面内容">
             <i class="fas fa-magic"></i>
             <span class="button-content">AI 分析</span>
