feat: add notification msg while mouse hover the 'ai analysis'

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -19,7 +19,7 @@
               <span>Vue</span>
             </div>
           </div>
-          <button id="aiAnalyzeBtn" class="analyze-button" title="使用AI分析页面内容">
+          <button id="aiAnalyzeBtn" class="analyze-button">
             <i class="fas fa-magic"></i>
             <span class="button-content">AI 分析</span>
             <div class="loading-spinner hidden"></div>
