--- a/popup/popup.html
+++ b/popup/popup.html
@@ -31,7 +31,9 @@
 
       <div class="search-card">
         <div class="search-area">
-          <input type="text" id="searchInput" class="search-input" placeholder="点击上方关键词组合搜索条件...">
+          <input type="text" id="searchInput" class="search-input" placeholder="点击关键词进行预览, 点击'添加'进行关键字组合...">
+          <button id="addKeywordBtn" class="add-keyword-btn">添加</button>
+          <div id="keywordTags" class="keyword-tags"></div>
         </div>
 
         <div class="button-area">
