feat: support double click keyworld to add/cancle selected keywords

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -31,8 +31,7 @@
 
       <div class="search-card">
         <div class="search-area">
-          <input type="text" id="searchInput" class="search-input" placeholder="点击关键词进行预览, 点击'添加'进行关键字组合...">
-          <button id="addKeywordBtn" class="add-keyword-btn">添加</button>
+          <input type="text" id="searchInput" class="search-input" placeholder="点击关键词预览, 双击添加进关键字组...">
           <div id="keywordTags" class="keyword-tags"></div>
         </div>
 
